hphp/hack/test/typecheck/readonly/readonly_idx_3.php.exp
File "readonly_idx_3.php", line 11, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
